# yProvFind

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  prepare_cli.bat  prepare_cli.sh  pyproject.toml
registryList/: registryList.json
src/: main.py  settings.py  test_documenti.py
src/application/: app.py  logging_config.py
src/cli/: __init__.py  pyproject.toml
src/cli/cli/: ypfind_cli.py
src/cli/cli/commands/: cli_demo.py  cli_indexing.py  cli_indexing_process.py  cli_registry.py  cli_scraper.py  cli_search.py  cli_timestamp.py
src/cli/cli/utils/: api_client.py
src/loggin/: logging_config.py
src/routers/: root.py
src/routers/delete/: delete.py
src/routers/deleteDoc/: deleteDoc_endpoint.py
src/routers/demo/: demo_endpoint.py
src/routers/fetch/: fetch.py
src/routers/file_counter/: file_counter_endpoint.py
src/routers/index_manager/: indexManager_endpoint.py  index_manager.py
src/routers/indexing_process/: indexing_process_endpoint.py
src/routers/query/: get_all.py  query.py  semantic_query.py
src/routers/registry/: registry_endpoint.py
src/routers/scraper/: scraper_endpoint.py
src/routers/searchDoc/: all_search.py  full_text_search.py  semantic_search.py
src/routers/search_service/: all_search.py  full_text_search.py  semantic_search.py
src/routers/timestamp_manager/: timestamp_endpoint.py  timestamp_manager.py
src/services/: __init__.py
src/services/LLM/: llm.py  llm_provider.py  test.py
src/services/demo/: demo.py
src/services/demo/example_documents/: documents_list.json
src/services/document_fetcher/: fetcher.py  indexer.py  provider.py
src/services/elasticSearch/: connection.py  es_connection.py  es_provider.py  multi_match_search.py  service.py
src/services/elasticSearch/connection/: es_connection.py  es_connection_provider.py  http_ca.crt
src/services/elasticSearch/delete_documents/: delete_documents.py  delete_provider.py
src/services/elasticSearch/file_counter/: file_counter.py
src/services/elasticSearch/index_manager/: create.py  delete.py  index_manager_provider.py
src/services/elasticSearch/query_search/: es_search_provider.py  multi_match_search.py  semantic_search.py
src/services/elasticSearch/search_documents/: all_documents.py  es_search_provider.py  full_text_search.py  multi_match_search.py  semantic_search.py
src/services/elasticSearch/search_service/: all_documents.py  full_text_search.py
src/services/elasticSearch/update_documents/: lineage_update_in_v1.py  update_documents_provider.py
src/services/embedding/: embedder.py  embedding_provider.py  embedding_service.py  provider.py  test.py
src/services/fetch_and_index/: provider.py
src/services/fetcher/: fetcher.py  fetcher_provider.py
src/services/indexer/: index_provider.py  indexer.py
src/services/metadata_enricher/: meta_enricher.py  meta_enricher_provider.py  prov_analyzer.py
src/services/orchestration/: RSEI_controller.py  RSEI_provider.py  RSEI_status.py  SFEI_controller.py  SFEI_provider.py  last_check_timestamp.py  last_fetch.json
src/services/registry/: registry.py  registry_provider.py
src/services/scraper/: scraper.py  scraper_provider.py
src/services/stac_catalog/: STAC_manager.py  STAC_provider.py  test.py
src/utils/: error_handlers.py
