[project]
name = "yProvFind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "apscheduler>=3.11.0",
    "certifi==2025.10.5",
    "click==8.3.0",
    "colorama==0.4.6",
    "dishka==1.7.2",
    "elastic-transport==9.1.0",
    "elasticsearch==9.1.1",
    "fastapi==0.118.0",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "idna==3.10",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.11.0",
    "pystac>=1.14.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "sentence-transformers>=5.1.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.8.14",
    "uvicorn==0.37.0",
]