[project]
name = "yProvFind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.0",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "apscheduler==3.11.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.4",
    "dishka==1.7.2",
    "distro==1.9.0",
    "elastic-transport==9.1.0",
    "elasticsearch==9.1.1",
    "fastapi==0.118.0",
    "filelock==3.19.1",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "google==3.0.0",
    "google-auth==2.48.0",
    "google-genai==1.60.0",
    "groq==1.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.3",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "openai==2.14.0",
    "packaging==25.0",
    "pillow==11.3.0",
    "pip==24.3.1",
    "propcache==0.4.0",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.11.0",
    "pygments==2.19.2",
    "pystac==1.14.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.3",
    "regex==2025.9.18",
    "requests==2.32.5",
    "rich==14.2.0",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "sentence-transformers==5.1.1",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "starlette==0.48.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "transformers==4.57.0",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "uv==0.8.14",
    "uvicorn==0.37.0",
    "websockets==15.0.1",
    "yarl==1.22.0",
    "yprovfind-cli",
]

[tool.uv.workspace]
members = [
    "src/cli",
    "src/cli",
]

[tool.uv.sources]
yprovfind-cli = { workspace = true }

